# CobaTesis

./: .gitignore  README.md  setup.sh
services/backend/: .env.example  .gitignore  config.py  pyproject.toml  requirements.txt
services/backend/app/: __init__.py  fix_terbaru.ipynb  response.py  routes.py
services/backend/app/controller/: DataModelController.py
services/backend/app/helper/: constant.py  helper.py  poc.py  preprocessing.py  quadran.py  vektor.py
services/backend/app/request/DataModel/: DataTestStoreRequest.py
services/backend/assets/models/: 4qmv_label_encoder.joblib  4qmv_scaler.joblib  hybrid_complete_results.joblib  hybrid_feature_selection_info.joblib  hybrid_label_encoder.joblib  hybrid_scaler.joblib  pca_100comp.joblib  scaler_lda.joblib
services/backend/assets/models/lawas/: 4qmv_svm_model_kfold.joblib  label_encoder_kfold.joblib
services/backend/assets/models/vps/: label_encoder_random_sampling.joblib
services/frontend/: .env.example  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
services/frontend/app/: globals.css
services/frontend/src/: index.css  main.tsx
services/frontend/src/components/index/: input-file.tsx  result-fetching.tsx  webcam.tsx
services/frontend/src/components/ui/: accordion.tsx  button.tsx  card.tsx  carousel.tsx  command.tsx  (+7 more)
services/frontend/src/hooks/: useLocalStorage.ts  useModel.ts
services/frontend/src/lib/: axios.ts  config.ts  helper.ts  shadcn-plugin.ts  shadcn-preset.ts
services/frontend/src/routes/: __root.tsx  index.tsx
(+6 files in other folders)
