[project]
name = "MicroExp"
version = "0.1.0"
description = "MicroExp"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "blinker==1.8.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "Flask==3.0.3",
    "Flask-JWT-Extended==4.6.0",
    "flask-marshmallow==1.2.1",
    "Flask-Migrate==4.0.7",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.1",
    "greenlet==3.0.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "Mako==1.3.5",
    "MarkupSafe==2.1.5",
    "marshmallow-sqlalchemy==1.0.0",
    "numpy==1.26.4",
    "opencv-python==4.10.0.82",
    "packaging==24.0",
    "PyJWT==2.8.0",
    "PyMySQL==1.1.0",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.30",
    "typing_extensions==4.11.0",
    "Werkzeug==3.0.3",
    "WTForms==3.1.2",
    "Flask-cors==6.0.1",
    "marshmallow==3.20.1",
    "matplotlib==3.10.7",
    "moviepy==1.0.3",
    "scipy==1.16.3",
    "joblib==1.5.2",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "scikit-learn==1.7.2",
    "dlib",
    "ipykernel",
    "tabulate",
    "opencv-python"
]
